--- a/nginx.conf
+++ b/nginx.conf
@@ -93,13 +93,17 @@ http {
             local uri = ngx.var.uri;
             uri = string.gsub(uri, "^%/innerImages", "")
             local img = img_server.get_tfs_as_img(nil, "/usr/local/tfsimage" .. uri)
-            local mt = img:get_minitype()
+            local mt = ""
+            if img then
+                mt = img:get_minitype()
+            end
             if mt == "" or string.find(uri, "%.svg") then
                 mt = "image/svg+xml"
             end
             ngx.header["Content-Type"] = mt
-
-            img:destroy()
+            if img then
+                img:destroy()
+            end
             ';
             alias /usr/local/tfsimage;
             expires max;
@@ -386,7 +390,7 @@ http {
                     ngx.req.set_uri("/v1/tfs/" .. ngx.var.tfsname, true)
                 end
                 fmt = img:get_format()
-                if fmt == "gif" then
+                if not fmt or fmt == "gif" or fmt == "svg" then
                     ngx.req.set_uri("/i1/src/" .. ngx.var.tfsname, true)
                 end
                 if ngx.var.g_q ~= "" then
@@ -398,8 +402,8 @@ http {
                 local ok, msg, code = img:write(ngx.var.filePath)
                 img:destroy()
                 if not (ok) then
-                    ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                    ngx.log(ngx.ERR, "ivk method[img:write] error, code:"..code.." msg:"..msg)
+                    ngx.req.set_uri("/i1/src/" .. ngx.var.tfsname, true)
                 end
 
                 ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true)
